[package]
name = "preconf_spammer"
version = "0.1.0"
edition = "2021"

[dependencies]

# async
tokio = { version = "1.41.0", features = ["full"] }

# ethereum
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }
alloy = { version = "0.6.4", features = [
  "full",
  "provider-anvil-api",
  "provider-anvil-node",
] }

# utils
dotenvy = "0.15.7"
eyre = "0.6.12"
thiserror = "1.0"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = "0.12.8"
rand = "0.8.5"

#serd
serde_json = "1.0.115"
dotenv = "0.15.0"
serde = "1.0.219"
